# endless_funeral

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile
.sqlx/: query-13a127ef5a96b522e7a285276e3ef3d17b9dd3378ad482d70e471e3a5ec71c47.json  query-29356ceade5be500173e8655241a35973a4333a3d19ec0b9e3dfabbd0bc97b8c.json
migrations/: 0001_create_abandonment_reasons.sql  0002_create_projects.sql  0003_create_technologies.sql  0004_create_project_technologies.sql  0005_create_revival_attempts.sql
scripts/: seed.sql
services/graveyard/: Cargo.toml  Dockerfile
services/graveyard/src/: main.rs  models.rs  routes.rs
shared/: Cargo.toml
shared/src/: db.rs
