[package]
name = "graveyard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
shared = { path = "../../shared" }
